refactor: Address PR #246 review feedback
- TaxEfficientSequencerTest: Use getFirst()/getLast() instead of get(0)/get(size-1)
- SpendingContext.Builder: Simplify null checks in build() - portfolio is required
  and Portfolio/PersonProfile guarantee owner and dateOfBirth are non-null

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>